@@ -11,3 +11,5 @@ pypi or custom url
 25-Oct-2010: adding base templates base.html, 404.html, 500.html
 25-Oct-2010: updating templates
 05-Nov-2010: adding urls into projects and logs directory
+07-Nov-2010: fixing sdist package
+07-Nov-2010: fixing settings template to load correct url, fixing url into producction
